--- a/masters-union.html
+++ b/masters-union.html
@@ -672,7 +672,167 @@
                                     <button class="form-button master" type="submit">Qeydiyyat</button>
                                 </form>
                             </div>
-                            
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 col-xl-8">
+                        <div class="right">
+                            <div class="swiper masters-main-swiper">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="image/masters/swiper/img-1.jpg">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="image/masters/swiper/img-2.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="masters-info-text">
+                                <span>SOBSAN USTALAR BİRLİYİ</span>
+                                <p>
+                                    Sobsan Ustalar Birliyi boya və kafel-metlax sahəsində öz işləri 
+                                    ilə seçilən və daim özünü təkmilləşdirməyə çalışan ustaların inkişaf 
+                                    platformasıdır. Məqsədimiz - bütün boya və kafel-metlax ustalarını 
+                                    birliyə cəlb edərək praktiki təlimlərlə onların bacarıqlarını daha da 
+                                    inkişaf etdirmək və sahələri üzrə ən son yeniliklərdən xəbərdar etməkdir. 
+                                    Boya və kafel-metlax yapışdırıcılarından istifadə edən hər bir usta Sobsan 
+                                    Ustalar Birliyinə üzv ola bilər. Birliyə üzv olan ustalar il ərzində təşkil 
+                                    olunan təlim və seminarlarda iştirak edərək ixtisaslaşmış mütəxəssislərdən 
+                                    bu peşənin sirlərinə dair bütün incəlikləri öyrənə bilərlər. Həmçinin platforma 
+                                    üzərindən təcrübə, bilik və bacarıqlarını həmkarları ilə paylaşa bilər, maraqlı 
+                                    müzakirə və söhbətlərə qatıla bilərlər. Platforma sözün əsl mənasında həm öyrədir, 
+                                    həm də qazandırır.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="masters-categories-wrapper">
+                    <div class="masters-categories-buttons">
+                        <button class="active">Tədbirlər</button>
+                        <button>Xəbərlər</button>
+                        <button>Aksiyalar</button>
+                        <button>Ustama faydalı</button>
+                        <button>Qalereya</button>
+                    </div>
+                    <div class="masters-category">
+                        <div class="swiper masters-category-swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="#" class="slide-card">
+                                        <div class="image"><img src="image/masters/tedbir-swiper/img-1.jpg"></div>
+                                        <span class="header">Bakı və Region nümayəndələri ilə görüş.</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="slide-card">
+                                        <div class="image"><img src="image/masters/tedbir-swiper/img-2.jpg"></div>
+                                        <span class="header">Şabran ustaları ilə görüş.</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="slide-card">
+                                        <div class="image"><img src="image/masters/tedbir-swiper/img-3.jpg"></div>
+                                        <span class="header">Tezliklə...</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="masters-category d-none">
+                        <div class="swiper masters-category-swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="#" class="slide-card">
+                                        <div class="image"><img src="image/masters/news-swiper/img-1.jpg"></div>
+                                        <span class="header">Dekorativ boya təlimi</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="slide-card">
+                                        <div class="image"><img src="image/masters/news-swiper/img-2.png"></div>
+                                        <span class="header">Ustalar üçün asan qeydiyyat</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="masters-category d-none"></div>
+                    <div class="masters-category d-none">
+                        <div class="swiper masters-category-swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="#" class="slide-card">
+                                        <div class="image"><img src="image/masters/ustama-faydali/img-1.jpg"></div>
+                                        <span class="header">Boyamaq üçün vacib qaydalar</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="slide-card">
+                                        <div class="image"><img src="image/masters/ustama-faydali/img-2.jpg"></div>
+                                        <span class="header">Tavan boyamada nələrə diqqət etməliyik?</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="masters-category d-none">
+                        <div class="swiper masters-gallery-swiper-1">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="image/masters/gallery/foto/img-1.jpg" class="gallery-item" data-fancybox="gallery-foto">
+                                        <img src="image/masters/gallery/foto/img-1.jpg">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="image/masters/gallery/foto/img-2.jpg" class="gallery-item" data-fancybox="gallery-foto">
+                                        <img src="image/masters/gallery/foto/img-2.jpg">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="image/masters/gallery/foto/img-3.jpg" class="gallery-item" data-fancybox="gallery-foto">
+                                        <img src="image/masters/gallery/foto/img-3.jpg">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="image/masters/gallery/foto/img-4.jpg" class="gallery-item" data-fancybox="gallery-foto">
+                                        <img src="image/masters/gallery/foto/img-4.jpg">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="image/masters/gallery/foto/img-5.jpg" class="gallery-item" data-fancybox="gallery-foto">
+                                        <img src="image/masters/gallery/foto/img-5.jpg">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="image/masters/gallery/foto/img-6.jpg" class="gallery-item" data-fancybox="gallery-foto">
+                                        <img src="image/masters/gallery/foto/img-6.jpg">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper masters-gallery-swiper-2">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="gallery-item">
+                                        <img src="image/masters/gallery/video/img-1.jpg">
+                                        <div class="hover-absolute-div">
+                                            <a href="image/masters/gallery/video/img-1.jpg" data-fancybox="">
+                                                <span class="play-button"><i class="fa-solid fa-play"></i></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="gallery-item">
+                                        <img src="image/masters/gallery/video/img-2.png">
+                                        <div class="hover-absolute-div">
+                                            <a href="image/masters/gallery/video/img-2.png" data-fancybox="">
+                                                <span class="play-button"><i class="fa-solid fa-play"></i></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -785,41 +945,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/main.js"></script>
-    <script>
-        let passwordVisibleButton = document.querySelector(".password-visible");
-        let eyeIcon = document.querySelector(".password-visible .fa-eye");
-        let eyeSlashIcon = document.querySelector(".password-visible .fa-eye-slash");
-        let passwordInput = document.getElementById("master-password");
-        passwordVisibleButton.addEventListener("click",function(){
-            if(eyeIcon.classList.contains("d-none")==true){
-                eyeSlashIcon.classList.add("d-none");
-                eyeIcon.classList.remove("d-none");
-                passwordInput.removeAttribute("type");
-                passwordInput.setAttribute("type","text");
-            }else{
-                eyeIcon.classList.add("d-none");
-                eyeSlashIcon.classList.remove("d-none");
-                passwordInput.removeAttribute("type");
-                passwordInput.setAttribute("type","password");
-            }
-        })
-    </script>
-    <script>
-        let mastersButtons = document.querySelectorAll(".masters-buttons button");
-        let mastersForm = document.querySelectorAll(".masters-form");
-        mastersButtons[0].addEventListener("click",function(){
-            mastersButtons[1].classList.remove("active");
-            mastersForm[1].classList.add("d-none");
-            mastersButtons[0].classList.add("active");
-            mastersForm[0].classList.remove("d-none");
-        });
-        mastersButtons[1].addEventListener("click",function(){
-            mastersButtons[0].classList.remove("active");
-            mastersForm[0].classList.add("d-none");
-            mastersButtons[1].classList.add("active");
-            mastersForm[1].classList.remove("d-none");
-        });
-    </script>
-    
+    <script src="js/masters.js"></script>
 </body>
 </html>
