--- a/restore-password.html
+++ b/restore-password.html
@@ -500,7 +500,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12 col-lg-6 col-center">
-                        <form action="#" autocomplete="off">
+                        <form action="#" autocomplete="off" class="form-general">
                             <div class="form-item">
                                 <div class="form-floating">
                                     <input type="email" class="form-control" id="user-email" placeholder="email">
